# shellbin

./: .gitignore  go.work.sum  readme.md  s.sh
.github/workflows/: build-containers.yml  pipeline.yml
chart/: Chart.yaml  values.yaml
chart/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  hpa.yaml  ingress.yaml  service.yaml  serviceaccount.yaml
chart/templates/tests/: test-connection.yaml
db-service/: Dockerfile  Makefile  entrypoint.sh
db-service/src/: go.mod  main.go
helm/: Chart.yaml  values.yaml
helm/database/: schema.sql  seed.sql
helm/templates/: NOTES.txt  _helpers.tpl  mani.db-service.yaml  manifest-db-service.yaml  manifest-webserver.yaml  tmp.nodeport.ncserver.yaml  tmp.nodeport.ws.yaml
helm/templates/common/: serviceaccount.yaml
helm/templates/database/: secret.yaml  (+3 more)
mysql-chart/: Chart.yaml  values.yaml
nc-server/: Dockerfile  entrypoint.sh
nc-server/src/: go.mod  main.go
netcat-server/: Makefile
rustwebserver/: Dockerfile
rustwebserver/rs/: Cargo.toml
rustwebserver/rs/src/: main.rs
scripts/: helm.sh  helm_install.sh  helm_upgrade.sh  update_images_local_registry.sh
shellbin-chart/: Chart.yaml  values.yaml
shellbin-chart/templates/: NOTES.txt  _helpers.tpl  ingress.yaml  mani.db-service.yaml  mani.ncServer.yaml  mani.rustwebserver.yaml  serviceaccount.yaml  svc.dep.db-service.yaml  svc.dep.ncServer.yaml  svc.dep.toolServer.yaml
tool-server/: Dockerfile  entrypoint.sh
tool-server/src/: go.mod  main.go
tool/src/: go.mod  main.go
webserver/: Dockerfile  Makefile  entrypoint.sh
webserver/src/: go.mod  main.go
(+16 files in other folders)
