[package]
name = "rustwebserver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.6.2"
actix-session = "0.7.2"
actix-web = "4.0"
awc = "3.1.1"
url = "2.2"
use = "0.0.0"
openssl = { version = "0.10.35", features = ["vendored"] }
reqwest = { version = "0.11", features = ["blocking", "json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0.183", features = ["derive"] }
serde_json = "1.0.105"
derive_more = { version = "1.0.0-beta.3", features = ["full"] }
lazy_static = "1.4.0"


[source.crates-io]
replace-with = "vendored-sources"

[source.vendored-sources]
directory = "vendor"
